@@ -72,4 +72,24 @@ public class LicenseInfo {
         }
         return new File( file.getParentFile(), child );
     }
+
+    //Autogenerated equals method necessary for preventing duplicate LicenseInfos from being added to the list in PhetProject#getAllLicenseInfo
+    @Override public boolean equals( Object o ) {
+        if ( this == o ) { return true; }
+        if ( o == null || getClass() != o.getClass() ) { return false; }
+
+        LicenseInfo that = (LicenseInfo) o;
+
+        if ( !file.equals( that.file ) ) { return false; }
+        if ( !line.equals( that.line ) ) { return false; }
+
+        return true;
+    }
+
+    @Override
+    public int hashCode() {
+        int result = file.hashCode();
+        result = 31 * result + line.hashCode();
+        return result;
+    }
 }
